--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages-clean && gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -31,7 +30,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.1.1",
+    "socket.io": "^4.7.5",
     "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "vite": "^5.3.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
